--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\Jackie\\AppData\\Roaming\\NetBeans\\8.0.2\\tomcat80.properties
 j2ee.server.home=C:/tomcat
 j2ee.server.instance=tomcat80:home=C:\\tomcat
-selected.browser=SL[/Browsers/IExplorerBrowser
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Jackie\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
